Created module for shapes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ set(SDL2_LIB_DIR C:\\MinGW\\include\\SDL2\\lib\\x64)
 include_directories(${SDL2_INCLUDE_DIR})
 link_directories(${SDL2_LIB_DIR})
 
-add_executable(geometry main.c vector3d.c)
+add_executable(geometry main.c vectors.c shapes.c)
 
 target_link_libraries(${PROJECT_NAME} SDL2main SDL2)
