Added .h files for external modules.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,9 @@ set(SDL2_INCLUDE_DIR C:\\MinGW\\include\\SDL2\\include)
 set(SDL2_LIB_DIR C:\\MinGW\\include\\SDL2\\lib\\x64)
 
 include_directories(${SDL2_INCLUDE_DIR})
+include_directories(.\\include)
 link_directories(${SDL2_LIB_DIR})
 
-add_executable(geometry main.c vectors.c shapes.c)
+add_executable(geometry src/main.c src/vectors.c src/shapes.c)
 
 target_link_libraries(${PROJECT_NAME} SDL2main SDL2)
